<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/neon" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:backgroundTint="#22FFFFFF"
        android:layout_marginLeft="16dp"
        app:cardCornerRadius="8dp">


    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal= "true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textSize="60sp" />


        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="100dp"
            android:text="@string/app_slogan"
            android:textColor="@color/gray"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <EditText
                android:id="@+id/etRegisterNameField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nickname_hint"
                android:textColorHint="@color/opaqueLime"
                android:textColor="@color/gray"
                android:background="@drawable/edit_text_border"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterEmailField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/opaqueLime"
                android:textColor="@color/gray"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_border"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/etRegisterPasswordField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/opaqueLime"
                android:textColor="@color/gray"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_border"
                android:textSize="18sp"
                />
            <EditText
                android:id="@+id/etRegisterConfirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/opaqueLime"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:textColor="@color/gray"
                android:background="@drawable/edit_text_border"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerSignInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/registerSignUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:text="@string/sign_up"
                android:textColor="@color/black" />

        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/progress_bar"
            android:layout_margin="12dp"
            android:visibility="gone"
            android:padding="12dp"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
