<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/neon"
        android:contentDescription="@string/contentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:backgroundTint="#22FFFFFF"
        android:layout_marginLeft="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:text="@string/app_name"
                android:textColor="@color/gray"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/app_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="100dp"
                android:contentDescription="@string/contentDescription"
                android:text="@string/app_slogan"
                android:textColor="@color/gray"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/etLoginEmailField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/opaqueLime"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etLoginPasswordField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/opaqueLime"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/gray"
                    android:text="@string/sign_in"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/sign_up"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:padding="12dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
