<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SnapAndDesignFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen">

        <ImageView
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/greentheme"
            android:alpha="0.4" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/welcomeMessage"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/uploadImageCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topImage"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/yourImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:src="@drawable/blurred"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvUploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/opaqueGreen"
                android:padding="8dp"
                android:text="@string/uploadImage"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progress_bar3"
                android:layout_width="match_parent"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:layout_height="80dp"
                android:layout_margin="70dp"
                android:visibility="gone"
                android:indeterminateTint="@color/darkGreen"
                android:padding="12dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/firstLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadImageCardView"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="What is your preferred color scheme for this room?"
                    android:textColor="@color/opaqueLime"/>

                <EditText
                    android:id="@+id/etColorScheme"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_border"
                    android:textColorHint="@color/opaqueLime"
                    android:hint=" e.g., Earth tones"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="What is your preferred design style?"
                    android:textColor="@color/opaqueLime"/>

                <EditText
                    android:id="@+id/etDesignStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_border"
                    android:textColorHint="@color/opaqueLime"
                    android:hint=" e.g., Minimalist"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="What type of room is this?"
                    android:textColor="@color/opaqueLime"/>

                <EditText
                    android:id="@+id/etRoomName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_border"
                    android:textColorHint="@color/opaqueLime"
                    android:hint=" e.g., Kitchen"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/designButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGreen"
            android:text="Compose"
            android:textColor="@color/white"
            android:contentDescription="@string/contentDescription"
            android:layout_below= "@id/firstLinearLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="14dp"
            app:icon="@drawable/design_icon"
            app:iconTint="@color/white" />

    </RelativeLayout>

</ScrollView>
