<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AboutUsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue">

        <ImageView
            android:id="@+id/topImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:alpha="0.4"
            android:scaleType="centerCrop"
            android:src="@drawable/bluetheme" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="Try Premium free for 1 month"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topImage"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick your Premium"
                android:textColor="@color/offwhite"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Only USD1.99/month after. Supercharge your experience with exclusive features."
                android:textColor="@color/gray" />

            <androidx.cardview.widget.CardView
                android:id="@+id/textToImageCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/opaqueBlue"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Text to Image"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvDescriptionOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/texttoimagedesc"
                        android:textColor="@color/offwhite"
                        android:textSize="15sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Coming Soon"
                android:textColor="@color/offwhite"
                android:textSize="19sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/afterImageCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/offwhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/yourAfterImage"
                        android:layout_width="80dp"
                        android:layout_height="96dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/replaceitem" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTitleTwo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/opaqueBlue"
                            android:padding="8dp"
                            android:text="Specific Item Replace"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvDescriptionTwo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/opaqueBlue"
                            android:padding="8dp"
                            android:text="@string/specificitemreplace"
                            android:textColor="@color/offwhite"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/thirdImageCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/yourthirdImage"
                        android:layout_width="80dp"
                        android:layout_height="96dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/remixhouse" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTitleThree"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/opaqueBlue"
                            android:padding="8dp"
                            android:text="Design Exterior"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvDescriptionThree"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/opaqueBlue"
                            android:padding="8dp"
                            android:text="@string/transformyard"
                            android:textColor="@color/offwhite"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
